# TrabalhosAcademicos

./: LICENSE  README.md
AMOV-Reversi-21-main/: README.md
AMOV-Weather-21-main/: README.md
HabitAqui-main/: HabitAqui.sln  README.md
HabitAqui-main/HabitAqui/: HabitAqui.csproj  Program.cs  appsettings.json
MyAirBnb-main/: README.md  TPV2.sln
MyAirBnb-main/TPV2/: Program.cs  Startup.cs  TPV2.csproj  appsettings.json
PD-22-main/: README.md
PD-22-main/TPPD/: PD-2022-23-TP.db
PD-22-main/bd_files/: PD-2022-23-TP.db
POO-25-main/: README.md
POO-25-main/POO2425_TP-master/: CMakeLists.txt
POO-25-main/POO2425_TP-master/Classes/Buffer/: Buffer.cpp  Buffer.h
POO-25-main/POO2425_TP-master/Classes/Caravanas/: Caravana.cpp  Caravana.h
POO-25-main/POO2425_TP-master/Classes/Caravanas/Barbara/: CaravanaBarbara.cpp  CaravanaBarbara.h
POO-25-main/POO2425_TP-master/Classes/Caravanas/Comercio/: CaravanaComercio.cpp  CaravanaComercio.h
POO-25-main/POO2425_TP-master/Classes/Caravanas/Militar/: CaravanaMilitar.cpp  CaravanaMilitar.h
POO-25-main/POO2425_TP-master/Classes/Caravanas/Secreta/: CaravanaSecreta.cpp  CaravanaSecreta.h
POO-25-main/POO2425_TP-master/Classes/Itens/: Itens.cpp  Itens.h
POO-25-main/POO2425_TP-master/Classes/Mapa/: Mapa.cpp  Mapa.h
POO-25-main/POO2425_TP-master/Classes/Simulador/: Simulador.cpp  Simulador.h
POO-25-main/POO2425_TP-master/Classes/Zonas/Cidade/: Cidade.h
SO-25-main/: README.md
SO2-25-main/: .gitignore  README.md
SO2-25-main/TP/: TP.sln  utils.h
TP-P-20-main/: README.md  TP_P.sln
TP-P-20-main/TP_P/: TP_P.c  abc.txt  (+9 more)
(+348 files in other folders)
